--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
 	},
 	"keywords": ["logging", "sysadmin", "tools", "winston", "papertrail"],
 	"devDependencies": {
-		"winston": "0.6.x",
+		"winston": ">=0.6.x",
 		"vows": "0.5.x"
 	},
 	"peerDependencies": {
-		"winston": "0.6.x"
+		"winston": ">=0.6.x"
 	},
 	"main": "./lib/winston-papertrail",
 	"scripts": { "test": "vows test/*-test.js --spec" },
