--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^5.11.1",
     "mocha": "^2.0.1",
     "should": "^4.3.0",
+    "triple-beam": "^1.3.0",
     "winston": ">=0.6.x"
   },
   "dependencies": {
